# arkflow

./: Cargo.toml
crates/arkflow-core/: Cargo.toml
crates/arkflow-core/src/: lib.rs
crates/arkflow-core/src/buffer/: mod.rs
crates/arkflow-core/src/engine/: mod.rs
crates/arkflow-core/src/input/: mod.rs
crates/arkflow-core/src/stream/: mod.rs
crates/arkflow-plugin/: Cargo.toml
crates/arkflow-plugin/src/: lib.rs
crates/arkflow-plugin/src/buffer/: memory.rs  mod.rs
crates/arkflow-plugin/src/input/: file.rs  generate.rs  http.rs  kafka.rs  memory.rs  mqtt.rs  sql.rs
crates/arkflow-plugin/src/output/: drop.rs  file.rs  http.rs  kafka.rs  mqtt.rs  stdout.rs
crates/arkflow-plugin/src/processor/: batch.rs
crates/arkflow-plugin/src/time/: mod.rs
crates/arkflow/src/: main.rs
examples/: generate_example.yaml
