[workspace.package]
version = "0.1.0"
edition = "2021"
description = "High-performance Rust flow processing engine"
authors = ["chenquan <chenquan.dev@gmail.com>"]
repository = "https://github.com/chenquan/arkflow"
homepage = "https://github.com/chenquan/arkflow"
license = "Apache-2.0"

[workspace]
members = [
    "crates/arkflow-plugin",
    "crates/arkflow-core",
    "crates/arkflow"
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.14"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
humantime = "2.1.0"

thiserror = "2.0"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"

datafusion = "46"
arrow-json = "54"
prost-reflect = "0.14.7"
prost-types = "0.13.5"
protobuf-parse = "3.7.2"
protobuf = "3.7.2"


toml = "0.8"
lazy_static = "1.4"

axum = "0.6"
reqwest = { version = "0.12", features = ["json"] }


clap = { version = "4.3", features = ["derive"] }
colored = "3.0"

flume = "=0.11"
rumqttc = "0.24.0"



# Kafka
aws-msk-iam-sasl-signer = "1.0.0"
rdkafka = { version = "0.37", features = ["cmake-build", "tracing", "sasl", "ssl-vendored", "zstd"] }
rdkafka-sys = "4.8.0"
sasl2-sys = { version = "0.1.22", features = ["vendored"] }

arkflow-core = { path = "crates/arkflow-core", version = "0.1.0" }
arkflow-plugin = { path = "crates/arkflow-plugin", version = "0.1.0" }
tempfile = "3.19.1"
mockall = "0.12"
