[package]
name = "arkflow-plugin"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true



[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
async-trait = { workspace = true }
futures-util = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
humantime = { workspace = true }

tracing = { workspace = true }

datafusion = { workspace = true }
datafusion-functions-json = "*"
datafusion-table-providers = { git = "https://github.com/ark-flow/datafusion-table-providers.git", branch = "datafusion-46", features = ["mysql", "postgres", "duckdb", "sqlite"] }
duckdb = "=1.2.1"
arrow-json = { workspace = true }
prost-reflect = { workspace = true }
prost-types = { workspace = true }
protobuf-parse = { workspace = true }
protobuf = { workspace = true }

lazy_static = { workspace = true }

axum = { workspace = true }
reqwest = { workspace = true }

clap = { workspace = true }
colored = { workspace = true }
flume = { workspace = true }
rumqttc = { workspace = true }

# Kafka
aws-msk-iam-sasl-signer = { workspace = true }
rdkafka = { workspace = true }
rdkafka-sys = { workspace = true }
sasl2-sys = { workspace = true }

# arkflow
arkflow-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
